--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@mysten/dapp-kit": "^0.16.15",
+    "@mysten/sui.js": "^0.54.1",
+    "@mysten/zklogin": "^0.8.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
