--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cetus": "node scripts/cetus.mjs"
   },
   "dependencies": {
+    "@cetusprotocol/sui-clmm-sdk": "^1.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@mysten/dapp-kit": "^0.16.15",
     "@mysten/sui.js": "^0.54.1",
