--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "pull": "supabase db pull"
+    "pull": "supabase db pull",
+    "test:game-room": "tsx scripts/game-room-tests/index.ts",
+    "transfer": "tsx scripts/game-room-tests/transfer.ts"
   },
   "dependencies": {
     "@cetusprotocol/common-sdk": "^1.1.6",
@@ -82,6 +84,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^17.2.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
@@ -89,6 +92,7 @@
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "tsx": "^4.20.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
