Refactor GameRoom and Leaderboard contexts for improved readability and performance
- Commented out debug logging statements in GameRoomContext and GameRoom classes to reduce noise in logs.
- Enhanced type definitions in GameRoomContext for better type safety.
- Updated prize distribution logic in GameRoomContext to handle on-chain results more effectively.
- Improved error handling and logging in GameRoomContext during game completion.
- Refactored LeaderboardContext to streamline leaderboard fetching and subscription logic.
- Added instructions field to game-related database types for better data management.
- Cleaned up Supabase client initialization by removing dotenv dependency.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview",
     "pull": "supabase db pull",
     "test:game-room": "tsx scripts/game-room-tests/index.ts",
+    "test:game-room-completion": "tsx scripts/test-game-room-completion.ts",
     "transfer": "tsx scripts/game-room-tests/transfer.ts",
     "recent-winners": "tsx scripts/supabase.ts"
   },
